--- a/style.css
+++ b/style.css
@@ -17,9 +17,18 @@ body{
 }
 
 .pantalla{
-    border: inset 5px #660708;
-    height: 550px;
-    width: 1200px;
-    background-color: #252422;
+    display: flex;
+    align-items: end;
+    border: solid 4px #ffc600;
+    height: 90%;
+    width: 90%;
+    background-color: #202020;
     border-radius: 20px;
+}
+
+.controladores{
+    border-radius: 0px 0px 14px 14px;
+    background-color: #0b0c0c;
+    width: 100%;
+    height: 80px;
 }
