--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -27,8 +29,32 @@ body{
 }
 
 .controladores{
+    padding: 0 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-radius: 0px 0px 14px 14px;
     background-color: #0b0c0c;
     width: 100%;
     height: 80px;
+}
+
+.cronometro span:first-child{
+    margin-right: 10px;
+}
+
+.cronometro span{
+    font-family: "Kode Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+    color: white;
+}
+
+.puntaje span{
+    font-family: "Kode Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+    color: white;
 }
