--- a/style.css
+++ b/style.css
@@ -58,3 +58,41 @@ body{
     font-size: 40px;
     color: white;
 }
+
+/* Cards */
+
+.cards{
+    display: flex;
+    flex-direction: row;
+}
+
+.contenidoCard{
+    width: 15%;
+    height: 250px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 15px;
+    margin: 10px;
+}
+
+.imgCard{
+    background-color: #ffc600;
+    border-radius: 50px;
+    margin-bottom: 30px;
+}
+
+.imgCard img{
+    padding: 10px;
+    width: 100px;
+}
+
+.titleCard{
+    font-family: "Kode Mono", monospace;
+    color: red;
+    font-weight: bold;
+}
+
