--- a/style.css
+++ b/style.css
@@ -61,9 +61,14 @@ body{
 
 /* Cards */
 
+.juego{
+    padding: 10px;
+}
+
 .cards{
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .contenidoCard{
@@ -76,7 +81,6 @@ body{
     justify-content: center;
     text-align: center;
     border-radius: 15px;
-    margin: 10px;
 }
 
 .imgCard{
