--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ body{
 
 /* Cards */
 
+
+
 .juego{
     padding: 10px;
 }
@@ -71,6 +73,21 @@ body{
     gap: 10px;
 }
 
+/*Respaldo*/
+.backCard{
+    width: 15%;
+    height: 250px;
+    border-radius: 20px;
+    background-color: wheat;
+}
+
+.backCard img{
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+/*Frente*/
 .contenidoCard{
     width: 15%;
     height: 250px;
@@ -81,13 +98,26 @@ body{
     justify-content: center;
     text-align: center;
     border-radius: 15px;
+    position: relative;
+    cursor: pointer;
 }
+
+.contenidoCard .back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    
+}
+
 
 .imgCard{
     background-color: #ffc600;
     border-radius: 50px;
     margin-bottom: 30px;
 }
+
+
 
 .imgCard img{
     padding: 10px;
