--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     border-radius: 0px 0px 14px 14px;
     background-color: #0b0c0c;
     width: 100%;
-    height: 80px;
+    height: 30%;
 }
 
 .cronometro span:first-child{
@@ -72,24 +72,15 @@ body{
     justify-content: center;
 }
 
-/*Respaldo*/
-.backCard{
-    width: 15%;
-    height: 250px;
-    border-radius: 20px;
-    background-color: wheat;
-}
 
-.backCard img{
-    border-radius: 20px;
-    width: 100%;
-    height: 100%;
-}
+
+
+
 
 /*Frente*/
 .contenidoCard{
     width: 15%;
-    height: 170px;
+    height: 50%;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -126,12 +117,43 @@ background: linear-gradient(90deg, rgba(255,158,0,1) 0%, rgba(255,170,0,1) 48%, 
 background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, rgba(255,234,0,1) 97%);
 }
 
+
+/*Respaldo*/
 .contenidoCard .back{
     position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 15px;
     
+}
+
+.contenidoCard .back2{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 8%;
+    border-radius: 15px 15px 0 0;
+    z-index: 9;
+    animation: corteRespaldo .2s;
+}
+
+.contenidoCard .back3{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 8%;
+    border-radius: 15px 15px 0 0;
+    z-index: 9;
+    animation: corteRespaldo .2s;
+}
+
+@keyframes corteRespaldo{
+    0%{
+        height: 100%;
+    }
+    100%{
+        height: 8%;
+    }
 }
 
 
