--- a/style.css
+++ b/style.css
@@ -28,6 +28,30 @@ body{
     border-radius: 20px;
 }
 
+.botonJuego{
+    padding: 10px;
+    background-color: #ffc600;
+    border-radius: 15px;
+    cursor: pointer;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botonJuego:hover{
+    background-color: #e96805;
+    transition: .5s;
+}
+
+.botonJuego span{
+    color: white;
+    font-weight: bold;
+    font-family: "Kode Mono", monospace;
+    font-size: 20px;
+}
+
 .controladores{
     padding: 0 30px;
     display: flex;
@@ -125,6 +149,27 @@ background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, 
     height: 100%;
     border-radius: 15px;
     
+}
+
+.contenidoCard .respaldo{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px 15px 0 0;
+    animation: ponerFondo1 1s;
+}
+
+@keyframes ponerFondo1{
+    0%{
+        height: 100%;
+    }
+    50%{
+        height: 8%;
+    }
+    100%{
+        height: 100%;
+        border-radius: 15px;
+    }
 }
 
 .contenidoCard .back2{
