--- a/style.css
+++ b/style.css
@@ -151,27 +151,35 @@ background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, 
     width: 100%;
     height: 100%;
     border-radius: 15px;
-    
 }
 
 .contenidoCard .respaldo{
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
-    border-radius: 15px 15px 0 0;
-    animation: ponerFondo1 1s;
+    border-radius: 15px;
+    animation: ponerFondo1 4s;
 }
 
 @keyframes ponerFondo1{
     0%{
         height: 100%;
     }
+    25%{
+        height: 8%;
+        border-radius: 15px 15px 0 0;
+    }
     50%{
         height: 8%;
+        border-radius: 15px 15px 0 0;
+    }
+    75%{
+        height: 8%;
+        border-radius: 15px 15px 0 0;
     }
     100%{
         height: 100%;
-        border-radius: 15px;
     }
 }
 
@@ -181,7 +189,6 @@ background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, 
     width: 100%;
     height: 8%;
     border-radius: 15px 15px 0 0;
-    z-index: 9;
     animation: corteRespaldo .2s;
 }
 
@@ -191,7 +198,6 @@ background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, 
     width: 100%;
     height: 8%;
     border-radius: 15px 15px 0 0;
-    z-index: 9;
     animation: corteRespaldo .2s;
 }
 
