--- a/style.css
+++ b/style.css
@@ -193,6 +193,9 @@ background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, 
     }
 }
 
+.ocultar{
+    display: none;
+}
 
 .contenidoCard .back3{
     top: 0;
