--- a/style.css
+++ b/style.css
@@ -165,9 +165,10 @@ background: linear-gradient(90deg, rgba(255,208,0,1) 0%, rgba(255,221,0,1) 48%, 
 .contenidoCard .respaldo2{
     position: absolute;
     top: 0;
-    width: 50%;
+    width: 100%;
     height: 100%;
     border-radius: 15px;
+    animation: ponerFondo1 .8s;
 }
 
 
