--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     background-color: #ffc600;
     border-radius: 15px;
     cursor: pointer;
-    width: 150px;
+    width: 200px;
     height: 50px;
     display: flex;
     align-items: center;
@@ -51,6 +51,14 @@ body{
     font-weight: bold;
     font-family: "Kode Mono", monospace;
     font-size: 20px;
+}
+
+.botonJuego a{
+    color: white;
+    font-weight: bold;
+    font-family: "Kode Mono", monospace;
+    font-size: 20px;
+    text-decoration: none;
 }
 
 .controladores{
